--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -4,14 +4,18 @@
   <title> <%= title_set yield :title %> </title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
-  
   <%= render 'layouts/shim' %>
   <%= csrf_meta_tags %>
 </head>
+
+
 <body>
+  
  <%= render 'layouts/header_menu' %>
     <div class="container">
-
+<% flash.each do |message_type, message| %>
+  <div class="alert alert-<%= message_type %>"><%= message %></div>
+<% end %>  
 <%= yield %>
 
 <%= render 'layouts/footer' %>
