--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,4 +1,24 @@
 <% provide :title, 'Sign Up'%>
 
 <h1>Users#signup</h1>
-<p>Find me in app/views/users/signup.html.erb</p>
+<section>
+    <div class="col-md-6 col-md-offset-3">
+    <%= render 'shared/error_messages' %>        
+        <%= form_for @user do |form| %>
+        <%= form.label :Name %>
+        <%= form.text_field :name, class: 'form-control' %>
+        <%#Email%>
+        <%= form.label :Email %>
+        <%= form.text_field :email, class: 'form-control' %>
+        <%#Passwords%>
+        <%= form.label :password %>
+        <%= form.password_field :password, class: 'form-control' %>
+    
+        <%= form.label :password_confirmation, "Confirmation" %>
+        <%= form.password_field :password_confirmation, class: 'form-control' %>
+        
+        <%#Submit%>
+        <%= form.submit "Create my account", class: "btn btn-primary" %>
+        <%end%>
+    </div>
+</section>
